--- a/index.html
+++ b/index.html
@@ -87,82 +87,98 @@
    }
 	
    function clears2(){
-	   if(document.getElementById("screen2").value==1){
-		  document.getElementById("e").play();  
+	   <!-- if(document.getElementById("screen2").value==1){ -->
+		  <!-- document.getElementById("e").play();   -->
+	 <!-- }  -->
+	 <!-- if(document.getElementById("screen2").value==2){ -->
+		  <!-- document.getElementById("f").play();   -->
+	 <!-- }  -->
+	 <!-- if(document.getElementById("screen2").value==3){ -->
+		  <!-- document.getElementById("g").play();   -->
+	 <!-- }  -->
+	 <!-- if(document.getElementById("screen2").value==4){ -->
+		  <!-- document.getElementById("h").play();   -->
+	 <!-- }  -->
+	 <!-- if(document.getElementById("screen2").value==11){ -->
+	      <!-- document.getElementById("e").play();  -->
+		<!-- setTimeout(function(){document.getElementById("e").play()}, document.getElementById("e").duration*1100); 	     -->
+	   <!-- } -->
+	  <!-- if(document.getElementById("screen2").value==12){ -->
+	      <!-- document.getElementById("e").play();  -->
+		<!-- setTimeout(function(){document.getElementById("f").play()}, document.getElementById("e").duration*1000); 	     -->
+	   <!-- } -->
+	  <!-- if(document.getElementById("screen2").value==13){ -->
+	      <!-- document.getElementById("e").play();  -->
+		<!-- setTimeout(function(){document.getElementById("g").play()}, document.getElementById("e").duration*1000); 	     -->
+	   <!-- }  -->
+	  <!-- if(document.getElementById("screen2").value==14){ -->
+	      <!-- document.getElementById("e").play();  -->
+		<!-- setTimeout(function(){document.getElementById("h").play()}, document.getElementById("e").duration*1000); 	     -->
+	   <!-- }  -->
+	   <!-- if(document.getElementById("screen2").value==21){ -->
+	      <!-- document.getElementById("f").play();  -->
+		<!-- setTimeout(function(){document.getElementById("e").play()}, document.getElementById("f").duration*1000); 	     -->
+	   <!-- }  -->
+	   <!-- if(document.getElementById("screen2").value==22){ -->
+	      <!-- document.getElementById("f").play();  -->
+		<!-- setTimeout(function(){document.getElementById("f").play()}, document.getElementById("f").duration*1100); 	     -->
+	   <!-- }  -->
+	   <!-- if(document.getElementById("screen2").value==23){ -->
+	      <!-- document.getElementById("f").play();  -->
+		<!-- setTimeout(function(){document.getElementById("g").play()}, document.getElementById("f").duration*1000); 	     -->
+	   <!-- }  -->
+	   <!-- if(document.getElementById("screen2").value==24){ -->
+	      <!-- document.getElementById("f").play();  -->
+		<!-- setTimeout(function(){document.getElementById("h").play()}, document.getElementById("f").duration*1000); 	     -->
+	   <!-- }  -->
+	      <!-- if(document.getElementById("screen2").value==31){ -->
+	      <!-- document.getElementById("g").play();  -->
+		<!-- setTimeout(function(){document.getElementById("e").play()}, document.getElementById("g").duration*1000); 	     -->
+	   <!-- }  -->
+	   <!-- if(document.getElementById("screen2").value==32){ -->
+	      <!-- document.getElementById("g").play();  -->
+		<!-- setTimeout(function(){document.getElementById("f").play()}, document.getElementById("g").duration*1000); 	     -->
+	   <!-- }  -->
+	   <!-- if(document.getElementById("screen2").value==33){ -->
+	      <!-- document.getElementById("f").play();  -->
+		<!-- setTimeout(function(){document.getElementById("g").play()}, document.getElementById("g").duration*1100); 	     -->
+	   <!-- }  -->
+	   <!-- if(document.getElementById("screen2").value==34){ -->
+	      <!-- document.getElementById("g").play();  -->
+		<!-- setTimeout(function(){document.getElementById("h").play()}, document.getElementById("g").duration*1000); 	     -->
+	   <!-- }  -->
+	      <!-- if(document.getElementById("screen2").value==41){ -->
+	      <!-- document.getElementById("h").play();  -->
+		<!-- setTimeout(function(){document.getElementById("e").play()}, document.getElementById("h").duration*1000); 	     -->
+	   <!-- }  -->
+	   <!-- if(document.getElementById("screen2").value==42){ -->
+	      <!-- document.getElementById("h").play();  -->
+		<!-- setTimeout(function(){document.getElementById("f").play()}, document.getElementById("h").duration*1000); 	     -->
+	   <!-- }  -->
+	   <!-- if(document.getElementById("screen2").value==43){ -->
+	      <!-- document.getElementById("h").play();  -->
+		<!-- setTimeout(function(){document.getElementById("g").play()}, document.getElementById("h").duration*1000); 	     -->
+	   <!-- }  -->
+	   <!-- if(document.getElementById("screen2").value==44){ -->
+	      <!-- document.getElementById("h").play();  -->
+		<!-- setTimeout(function(){document.getElementById("h").play()}, document.getElementById("h").duration*1000); 	     -->
+	   <!-- }  -->
+	   var i;
+	   var v =document.getElementById("screen2").value;
+	   for(i=0;i<v.length;i++){
+	 if(v[i]==1){
+		  document.getElementById("a").play();  
 	 } 
-	 if(document.getElementById("screen2").value==2){
-		  document.getElementById("f").play();  
+	 if(v[i]==2){
+		  document.getElementById("b").play();  
 	 } 
-	 if(document.getElementById("screen2").value==3){
-		  document.getElementById("g").play();  
+	 if(v[i]==3){
+		  document.getElementById("c").play();  
 	 } 
-	 if(document.getElementById("screen2").value==4){
-		  document.getElementById("h").play();  
-	 } 
-	 if(document.getElementById("screen2").value==11){
-	      document.getElementById("e").play(); 
-		setTimeout(function(){document.getElementById("e").play()}, document.getElementById("e").duration*1100); 	    
-	   }
-	  if(document.getElementById("screen2").value==12){
-	      document.getElementById("e").play(); 
-		setTimeout(function(){document.getElementById("f").play()}, document.getElementById("e").duration*1000); 	    
-	   }
-	  if(document.getElementById("screen2").value==13){
-	      document.getElementById("e").play(); 
-		setTimeout(function(){document.getElementById("g").play()}, document.getElementById("e").duration*1000); 	    
-	   } 
-	  if(document.getElementById("screen2").value==14){
-	      document.getElementById("e").play(); 
-		setTimeout(function(){document.getElementById("h").play()}, document.getElementById("e").duration*1000); 	    
-	   } 
-	   if(document.getElementById("screen2").value==21){
-	      document.getElementById("f").play(); 
-		setTimeout(function(){document.getElementById("e").play()}, document.getElementById("f").duration*1000); 	    
-	   } 
-	   if(document.getElementById("screen2").value==22){
-	      document.getElementById("f").play(); 
-		setTimeout(function(){document.getElementById("f").play()}, document.getElementById("f").duration*1100); 	    
-	   } 
-	   if(document.getElementById("screen2").value==23){
-	      document.getElementById("f").play(); 
-		setTimeout(function(){document.getElementById("g").play()}, document.getElementById("f").duration*1000); 	    
-	   } 
-	   if(document.getElementById("screen2").value==24){
-	      document.getElementById("f").play(); 
-		setTimeout(function(){document.getElementById("h").play()}, document.getElementById("f").duration*1000); 	    
-	   } 
-	      if(document.getElementById("screen2").value==31){
-	      document.getElementById("g").play(); 
-		setTimeout(function(){document.getElementById("e").play()}, document.getElementById("g").duration*1000); 	    
-	   } 
-	   if(document.getElementById("screen2").value==32){
-	      document.getElementById("g").play(); 
-		setTimeout(function(){document.getElementById("f").play()}, document.getElementById("g").duration*1000); 	    
-	   } 
-	   if(document.getElementById("screen2").value==33){
-	      document.getElementById("f").play(); 
-		setTimeout(function(){document.getElementById("g").play()}, document.getElementById("g").duration*1100); 	    
-	   } 
-	   if(document.getElementById("screen2").value==34){
-	      document.getElementById("g").play(); 
-		setTimeout(function(){document.getElementById("h").play()}, document.getElementById("g").duration*1000); 	    
-	   } 
-	      if(document.getElementById("screen2").value==41){
-	      document.getElementById("h").play(); 
-		setTimeout(function(){document.getElementById("e").play()}, document.getElementById("h").duration*1000); 	    
-	   } 
-	   if(document.getElementById("screen2").value==42){
-	      document.getElementById("h").play(); 
-		setTimeout(function(){document.getElementById("f").play()}, document.getElementById("h").duration*1000); 	    
-	   } 
-	   if(document.getElementById("screen2").value==43){
-	      document.getElementById("h").play(); 
-		setTimeout(function(){document.getElementById("g").play()}, document.getElementById("h").duration*1000); 	    
-	   } 
-	   if(document.getElementById("screen2").value==44){
-	      document.getElementById("h").play(); 
-		setTimeout(function(){document.getElementById("h").play()}, document.getElementById("h").duration*1000); 	    
-	   } 
+	  if(v[i]==4){
+		  document.getElementById("d").play();  
+	  } 	   
+	 }
 	   document.getElementById("screen2").value="";
    }
    
