--- a/index.html
+++ b/index.html
@@ -167,16 +167,16 @@
 	   var v =document.getElementById("screen2").value;
 	   for(i=0;i<v.length;i++){
 	 if(v[i]==1){
-		  document.getElementById("a").play();  
+		  setTimeout(function(){document.getElementById("e").play()}, 1000); 
 	 } 
 	 if(v[i]==2){
-		  document.getElementById("b").play();  
+		  setTimeout(function(){document.getElementById("f").play()}, 1000)
 	 } 
 	 if(v[i]==3){
-		  document.getElementById("c").play();  
+		  setTimeout(function(){document.getElementById("g").play()}, 1000)  
 	 } 
 	  if(v[i]==4){
-		  document.getElementById("d").play();  
+		  setTimeout(function(){document.getElementById("h").play()}, 1000) 
 	  } 	   
 	 }
 	   document.getElementById("screen2").value="";
