--- a/index.html
+++ b/index.html
@@ -167,16 +167,32 @@
 	   var v =document.getElementById("screen2").value;
 	   for(i=0;i<v.length;i++){
 	 if(v[i]==1){
+	      if(i!=0){
 		  setTimeout(function(){document.getElementById("e").play()}, 1000); 
+		  }else{
+		  document.getElementById("e").play();
+		  }
 	 } 
 	 if(v[i]==2){
+	     if(i!=0){
 		  setTimeout(function(){document.getElementById("f").play()}, 1000)
+		  }else{
+		  document.getElementById("f").play();
+		  }
 	 } 
 	 if(v[i]==3){
+	      if(i!=0){
 		  setTimeout(function(){document.getElementById("g").play()}, 1000)  
+		  }else{
+		  document.getElementById("g").play();
+		  }
 	 } 
 	  if(v[i]==4){
-		  setTimeout(function(){document.getElementById("h").play()}, 1000) 
+	      if(i!=0){
+		  setTimeout(function(){document.getElementById("h").play()}, 1000)
+		  }else{
+		  document.getElementById("h").play();		  
+		  }
 	  } 	   
 	 }
 	   document.getElementById("screen2").value="";
