--- a/index.html
+++ b/index.html
@@ -182,9 +182,11 @@
 	 } 
 	 if(v[i]==3){
 	      if(i!=0){
-		  setTimeout(function(){document.getElementById("g").play()}, 3000)  
+		  setTimeout(function(){document.getElementById("g").play()}, 3000) 
+
 		  }else{
 		  document.getElementById("g").play();
+		               alert("Hello!");
 		  }
 	 } 
 	  if(v[i]==4){
@@ -192,6 +194,7 @@
 		  setTimeout(function(){document.getElementById("h").play()}, 3000)
 		  }else{
 		  document.getElementById("h").play();		  
+		    alert("Hello!");
 		  }
 	  } 	   
 	 }
