--- a/index.html
+++ b/index.html
@@ -173,18 +173,18 @@
 	 } 
 	 if(v[i]==2){
 
-		  setTimeout(function(){document.getElementById("f").play()}, i*1000)
+		  setTimeout(function(){document.getElementById("f").play()}, i*1000);
 
 	 } 
 	 if(v[i]==3){
 
-		  setTimeout(function(){document.getElementById("g").play()}, i*1000) 
+		  setTimeout(function(){document.getElementById("g").play()}, i*1000);
 
 
 	 } 
 	  if(v[i]==4){
 
-		  setTimeout(function(){document.getElementById("h").play()}, i*1000)
+		  setTimeout(function(){document.getElementById("h").play()}, i*1000);
 		  
 	   
 	 }
