--- a/index.html
+++ b/index.html
@@ -6,186 +6,41 @@
 <script type="text/javascript"> 
  
    function clears1(){	
-	 
-	 if(document.getElementById("screen1").value==1){
-		  document.getElementById("a").play();  
-	 } 
-	 if(document.getElementById("screen1").value==2){
-		  document.getElementById("b").play();  
-	 } 
-	 if(document.getElementById("screen1").value==3){
-		  document.getElementById("c").play();  
-	 } 
-	 if(document.getElementById("screen1").value==4){
-		  document.getElementById("d").play();  
-	 } 
-	 if(document.getElementById("screen1").value==11){
-	      document.getElementById("a").play(); 
-		setTimeout(function(){document.getElementById("a").play()}, document.getElementById("a").duration*1100); 	    
-	   }
-	  if(document.getElementById("screen1").value==12){
-	      document.getElementById("a").play(); 
-		setTimeout(function(){document.getElementById("b").play()}, document.getElementById("a").duration*1000); 	    
-	   }
-	  if(document.getElementById("screen1").value==13){
-	      document.getElementById("a").play(); 
-		setTimeout(function(){document.getElementById("c").play()}, document.getElementById("a").duration*1000); 	    
-	   } 
-	  if(document.getElementById("screen1").value==14){
-	      document.getElementById("a").play(); 
-		setTimeout(function(){document.getElementById("d").play()}, document.getElementById("a").duration*1000); 	    
-	   } 
-	   if(document.getElementById("screen1").value==21){
-	      document.getElementById("b").play(); 
-		setTimeout(function(){document.getElementById("a").play()}, document.getElementById("b").duration*1000); 	    
-	   } 
-	   if(document.getElementById("screen1").value==22){
-	      document.getElementById("b").play(); 
-		setTimeout(function(){document.getElementById("b").play()}, document.getElementById("b").duration*1100); 	    
-	   } 
-	   if(document.getElementById("screen1").value==23){
-	      document.getElementById("b").play(); 
-		setTimeout(function(){document.getElementById("c").play()}, document.getElementById("b").duration*1000); 	    
-	   } 
-	   if(document.getElementById("screen1").value==24){
-	      document.getElementById("b").play(); 
-		setTimeout(function(){document.getElementById("d").play()}, document.getElementById("b").duration*1000); 	    
-	   } 
-	      if(document.getElementById("screen1").value==31){
-	      document.getElementById("c").play(); 
-		setTimeout(function(){document.getElementById("a").play()}, document.getElementById("c").duration*1000); 	    
-	   } 
-	   if(document.getElementById("screen1").value==32){
-	      document.getElementById("c").play(); 
-		setTimeout(function(){document.getElementById("b").play()}, document.getElementById("c").duration*1000); 	    
-	   } 
-	   if(document.getElementById("screen1").value==33){
-	      document.getElementById("b").play(); 
-		setTimeout(function(){document.getElementById("c").play()}, document.getElementById("c").duration*1100); 	    
-	   } 
-	   if(document.getElementById("screen1").value==34){
-	      document.getElementById("c").play(); 
-		setTimeout(function(){document.getElementById("d").play()}, document.getElementById("c").duration*1000); 	    
-	   } 
-	      if(document.getElementById("screen1").value==41){
-	      document.getElementById("d").play(); 
-		setTimeout(function(){document.getElementById("a").play()}, document.getElementById("d").duration*1000); 	    
-	   } 
-	   if(document.getElementById("screen1").value==42){
-	      document.getElementById("d").play(); 
-		setTimeout(function(){document.getElementById("b").play()}, document.getElementById("d").duration*1000); 	    
-	   } 
-	   if(document.getElementById("screen1").value==43){
-	      document.getElementById("d").play(); 
-		setTimeout(function(){document.getElementById("c").play()}, document.getElementById("d").duration*1000); 	    
-	   } 
-	   if(document.getElementById("screen1").value==44){
-	      document.getElementById("d").play(); 
-		setTimeout(function(){document.getElementById("d").play()}, document.getElementById("d").duration*1500); 	    
-	   } 
-	   document.getElementById("screen1").value="";  
-   }
-	
-   function clears2(){
-	   <!-- if(document.getElementById("screen2").value==1){ -->
-		  <!-- document.getElementById("e").play();   -->
-	 <!-- }  -->
-	 <!-- if(document.getElementById("screen2").value==2){ -->
-		  <!-- document.getElementById("f").play();   -->
-	 <!-- }  -->
-	 <!-- if(document.getElementById("screen2").value==3){ -->
-		  <!-- document.getElementById("g").play();   -->
-	 <!-- }  -->
-	 <!-- if(document.getElementById("screen2").value==4){ -->
-		  <!-- document.getElementById("h").play();   -->
-	 <!-- }  -->
-	 <!-- if(document.getElementById("screen2").value==11){ -->
-	      <!-- document.getElementById("e").play();  -->
-		<!-- setTimeout(function(){document.getElementById("e").play()}, document.getElementById("e").duration*1100); 	     -->
-	   <!-- } -->
-	  <!-- if(document.getElementById("screen2").value==12){ -->
-	      <!-- document.getElementById("e").play();  -->
-		<!-- setTimeout(function(){document.getElementById("f").play()}, document.getElementById("e").duration*1000); 	     -->
-	   <!-- } -->
-	  <!-- if(document.getElementById("screen2").value==13){ -->
-	      <!-- document.getElementById("e").play();  -->
-		<!-- setTimeout(function(){document.getElementById("g").play()}, document.getElementById("e").duration*1000); 	     -->
-	   <!-- }  -->
-	  <!-- if(document.getElementById("screen2").value==14){ -->
-	      <!-- document.getElementById("e").play();  -->
-		<!-- setTimeout(function(){document.getElementById("h").play()}, document.getElementById("e").duration*1000); 	     -->
-	   <!-- }  -->
-	   <!-- if(document.getElementById("screen2").value==21){ -->
-	      <!-- document.getElementById("f").play();  -->
-		<!-- setTimeout(function(){document.getElementById("e").play()}, document.getElementById("f").duration*1000); 	     -->
-	   <!-- }  -->
-	   <!-- if(document.getElementById("screen2").value==22){ -->
-	      <!-- document.getElementById("f").play();  -->
-		<!-- setTimeout(function(){document.getElementById("f").play()}, document.getElementById("f").duration*1100); 	     -->
-	   <!-- }  -->
-	   <!-- if(document.getElementById("screen2").value==23){ -->
-	      <!-- document.getElementById("f").play();  -->
-		<!-- setTimeout(function(){document.getElementById("g").play()}, document.getElementById("f").duration*1000); 	     -->
-	   <!-- }  -->
-	   <!-- if(document.getElementById("screen2").value==24){ -->
-	      <!-- document.getElementById("f").play();  -->
-		<!-- setTimeout(function(){document.getElementById("h").play()}, document.getElementById("f").duration*1000); 	     -->
-	   <!-- }  -->
-	      <!-- if(document.getElementById("screen2").value==31){ -->
-	      <!-- document.getElementById("g").play();  -->
-		<!-- setTimeout(function(){document.getElementById("e").play()}, document.getElementById("g").duration*1000); 	     -->
-	   <!-- }  -->
-	   <!-- if(document.getElementById("screen2").value==32){ -->
-	      <!-- document.getElementById("g").play();  -->
-		<!-- setTimeout(function(){document.getElementById("f").play()}, document.getElementById("g").duration*1000); 	     -->
-	   <!-- }  -->
-	   <!-- if(document.getElementById("screen2").value==33){ -->
-	      <!-- document.getElementById("f").play();  -->
-		<!-- setTimeout(function(){document.getElementById("g").play()}, document.getElementById("g").duration*1100); 	     -->
-	   <!-- }  -->
-	   <!-- if(document.getElementById("screen2").value==34){ -->
-	      <!-- document.getElementById("g").play();  -->
-		<!-- setTimeout(function(){document.getElementById("h").play()}, document.getElementById("g").duration*1000); 	     -->
-	   <!-- }  -->
-	      <!-- if(document.getElementById("screen2").value==41){ -->
-	      <!-- document.getElementById("h").play();  -->
-		<!-- setTimeout(function(){document.getElementById("e").play()}, document.getElementById("h").duration*1000); 	     -->
-	   <!-- }  -->
-	   <!-- if(document.getElementById("screen2").value==42){ -->
-	      <!-- document.getElementById("h").play();  -->
-		<!-- setTimeout(function(){document.getElementById("f").play()}, document.getElementById("h").duration*1000); 	     -->
-	   <!-- }  -->
-	   <!-- if(document.getElementById("screen2").value==43){ -->
-	      <!-- document.getElementById("h").play();  -->
-		<!-- setTimeout(function(){document.getElementById("g").play()}, document.getElementById("h").duration*1000); 	     -->
-	   <!-- }  -->
-	   <!-- if(document.getElementById("screen2").value==44){ -->
-	      <!-- document.getElementById("h").play();  -->
-		<!-- setTimeout(function(){document.getElementById("h").play()}, document.getElementById("h").duration*1000); 	     -->
-	   <!-- }  -->
 	   var i;
 	   var v =document.getElementById("screen2").value;
 	   for(i=0;i<v.length;i++){
 	 if(v[i]==1){
-
-		  setTimeout(function(){document.getElementById("e").play()}, i*1000); 
-
+		  setTimeout(function(){document.getElementById("a").play()}, i*1000); 
 	 } 
 	 if(v[i]==2){
-
-		  setTimeout(function(){document.getElementById("f").play()}, i*1000);
-
+		  setTimeout(function(){document.getElementById("b").play()}, i*1000);
 	 } 
 	 if(v[i]==3){
-
-		  setTimeout(function(){document.getElementById("g").play()}, i*1000);
-
-
+		  setTimeout(function(){document.getElementById("c").play()}, i*1000);
 	 } 
 	  if(v[i]==4){
+		  setTimeout(function(){document.getElementById("d").play()}, i*1000);
+	  } 
+	 }	 
 
+	   document.getElementById("screen1").value="";  
+   }
+	
+   function clears2(){
+	   var i;
+	   var v =document.getElementById("screen2").value;
+	   for(i=0;i<v.length;i++){
+	 if(v[i]==1){
+		  setTimeout(function(){document.getElementById("e").play()}, i*1000); 
+	 } 
+	 if(v[i]==2){
+		  setTimeout(function(){document.getElementById("f").play()}, i*1000);
+	 } 
+	 if(v[i]==3){
+		  setTimeout(function(){document.getElementById("g").play()}, i*1000);
+	 } 
+	  if(v[i]==4){
 		  setTimeout(function(){document.getElementById("h").play()}, i*1000);
-		  
 	  } 
 	 }
 	   document.getElementById("screen2").value="";
