--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
 <script type="text/javascript"> 
  
    function clears1(){	
-	   var i;
-	   var v =document.getElementById("screen1").value;
-	   for(i=0;i<v.length;i++){
-	 if(v[i]==1){
-		  setTimeout(function(){document.getElementById("a").play()}, i*1000); 
+	   var j;
+	   var u =document.getElementById("screen1").value;
+	   for(j=0;j<u.length;j++){
+	 if(u[j]==1){
+		  setTimeout(function(){document.getElementById("a").play()}, j*1000); 
 	 } 
-	 if(v[i]==2){
-		  setTimeout(function(){document.getElementById("b").play()}, i*1000);
+	 if(u[j]==2){
+		  setTimeout(function(){document.getElementById("b").play()}, j*1000);
 	 } 
-	 if(v[i]==3){
-		  setTimeout(function(){document.getElementById("c").play()}, i*1000);
+	 if(u[j]==3){
+		  setTimeout(function(){document.getElementById("c").play()}, j*1000);
 	 } 
-	  if(v[i]==4){
-		  setTimeout(function(){document.getElementById("d").play()}, i*1000);
+	  if(u[j]==4){
+		  setTimeout(function(){document.getElementById("d").play()}, j*1000);
 	  } 
 	 }	 
 
