--- a/index.html
+++ b/index.html
@@ -73,14 +73,14 @@
         <th><input type="button" value="M2" onclick="M2()"></th>
 	    <th><input type="button" value="M3" onclick="M3()"></th>
         <th><input type="button" value="M4" onclick="M4()"></th>
-	    <th><input type="button" value="M5" onclick="M5()"></th>
+	    <!-- <th><input type="button" value="M5" onclick="M5()"></th> -->
 	</tr>
     <tr>
         <th><input type="button" value="F1" onclick="F1()"></th>
         <th><input type="button" value="F2" onclick="F2()"></th>
 	    <th><input type="button" value="F3" onclick="F3()"></th>
         <th><input type="button" value="F4" onclick="F4()"></th>
-	    <th><input type="button" value="F5" onclick="F5()"></th>
+	    <!-- <th><input type="button" value="F5" onclick="F5()"></th> -->
 	</tr>	
     <table>
       	<tr>
