--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
    function clears2(){
 	   var i;
 	   var v =document.getElementById("screen2").value;
+	   var counter2;
+	   var temp;
+	   temp=0;
 	   for(i=0;i<v.length;i++){
 	 if(v[i]==1){
 		  setTimeout(function(){document.getElementById("e").play()}, i*1000); 
@@ -37,8 +40,23 @@
 		  setTimeout(function(){document.getElementById("f").play()}, i*1000);
 	 } 
 	 if(v[i]==3){
+          if(i>temp){
+		  temp = i;
+		  counter2=0;
+		  }
+	      while(v[temp]==3){
+		   counter2++;
+		   temp++;
+		  }
+		  if(counter2%2==1){
 		  setTimeout(function(){document.getElementById("g").play()}, i*1000);
+		  counter2--;
+		  }else{
+		  setTimeout(function(){document.getElementById("f").play()}, i*1000);
+		  		  counter2--;
+		  }
 	 } 
+
 	  if(v[i]==4){
 		  setTimeout(function(){document.getElementById("h").play()}, i*1000);
 	  } 
