--- a/index.html
+++ b/index.html
@@ -8,21 +8,39 @@
    function clears1(){	
 	   var j;
 	   var u =document.getElementById("screen1").value;
-	   for(j=0;j<u.length;j++){
-	 if(u[j]==1){
-		  setTimeout(function(){document.getElementById("a").play()}, j*1000); 
+	   var counter1;
+	   var temp1;
+	   temp1=0;
+	   counter1=0;
+	   for(i=0;i<v.length;i++){
+	 if(v[i]==1){
+		  setTimeout(function(){document.getElementById("e").play()}, i*1000); 
 	 } 
-	 if(u[j]==2){
-		  setTimeout(function(){document.getElementById("b").play()}, j*1000);
+	 if(v[i]==2){
+		  setTimeout(function(){document.getElementById("f").play()}, i*1000);
 	 } 
-	 if(u[j]==3){
-		  setTimeout(function(){document.getElementById("c").play()}, j*1000);
+	 if(v[i]==3){
+          if(i+1>temp1){
+		  temp1 = i;
+		  counter1=0;
+		  while(v[temp1]==3){
+		   counter1++;
+		   temp1++;
+		  }
+		  }
+		  if(counter1%2==1){
+		  setTimeout(function(){document.getElementById("g").play()}, i*1000);
+		  counter1--;
+		  }else{
+		  setTimeout(function(){document.getElementById("f").play()}, i*1000);
+		  		  counter1--;
+		  }
 	 } 
-	  if(u[j]==4){
-		  setTimeout(function(){document.getElementById("d").play()}, j*1000);
-	  } 
-	 }	 
 
+	  if(v[i]==4){
+		  setTimeout(function(){document.getElementById("h").play()}, i*1000);
+	  } 
+	 }
 	   document.getElementById("screen1").value="";  
    }
 	
@@ -30,8 +48,8 @@
 	   var i;
 	   var v =document.getElementById("screen2").value;
 	   var counter2;
-	   var temp;
-	   temp=0;
+	   var temp2;
+	   temp2=0;
 	   counter2=0;
 	   for(i=0;i<v.length;i++){
 	 if(v[i]==1){
@@ -41,15 +59,14 @@
 		  setTimeout(function(){document.getElementById("f").play()}, i*1000);
 	 } 
 	 if(v[i]==3){
-          if(i+1>temp){
-		  temp = i;
+          if(i+1>temp2){
+		  temp2 = i;
 		  counter2=0;
-		  while(v[temp]==3){
+		  while(v[temp2]==3){
 		   counter2++;
-		   temp++;
+		   temp2++;
 		  }
 		  }
-
 		  if(counter2%2==1){
 		  setTimeout(function(){document.getElementById("g").play()}, i*1000);
 		  counter2--;
