--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
 	   var temp1;
 	   temp1=0;
 	   counter1=0;
-	   for(i=0;i<v.length;i++){
-	 if(v[i]==1){
-		  setTimeout(function(){document.getElementById("e").play()}, i*1000); 
+	   for(j=0;j<v.length;j++){
+	 if(u[j]==1){
+		  setTimeout(function(){document.getElementById("a").play()}, j*1000); 
 	 } 
-	 if(v[i]==2){
-		  setTimeout(function(){document.getElementById("f").play()}, i*1000);
+	 if(u[j]==2){
+		  setTimeout(function(){document.getElementById("b").play()}, j*1000);
 	 } 
-	 if(v[i]==3){
-          if(i+1>temp1){
-		  temp1 = i;
+	 if(u[j]==3){
+          if(j+1>temp1){
+		  temp1 = j;
 		  counter1=0;
 		  while(v[temp1]==3){
 		   counter1++;
@@ -29,16 +29,16 @@
 		  }
 		  }
 		  if(counter1%2==1){
-		  setTimeout(function(){document.getElementById("g").play()}, i*1000);
+		  setTimeout(function(){document.getElementById("c").play()}, j*1000);
 		  counter1--;
 		  }else{
-		  setTimeout(function(){document.getElementById("f").play()}, i*1000);
+		  setTimeout(function(){document.getElementById("b").play()}, j*1000);
 		  		  counter1--;
 		  }
 	 } 
 
-	  if(v[i]==4){
-		  setTimeout(function(){document.getElementById("h").play()}, i*1000);
+	  if(u[j]==4){
+		  setTimeout(function(){document.getElementById("d").play()}, j*1000);
 	  } 
 	 }
 	   document.getElementById("screen1").value="";  
