--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 <head>
 <meta charset="UTF-8">
+	    <style type="text/css">
+              .jumbotron { text-align: center; }
+            </style>
 <title>发音工具</title>
 <script type="text/javascript"> 
  
