--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-	    <style type="text/css">
-              .jumbotron { text-align: center; }
-            </style>
+<link rel="stylesheet" type="text/css" href="style.css"/>
 <title>发音工具</title>
 <script type="text/javascript"> 
  
