--- a/index.html
+++ b/index.html
@@ -95,17 +95,12 @@
    function F3(){document.getElementById("g").play(); }
    function F4(){document.getElementById("h").play(); }
    function F5(){ } 	
-  
-   function onEnterDown(){ 
-      if(window.event.keyCode == 13){ 
-         clears1();
-         clears2();
-        } 
-    }  
+    
 </script>
 </head>
 <body onkeydown='onEnterDown();'>
 (M=Male, F=Female)<br/>
+   <table>
      <tr>
         <th><input type="button" value="M1" onclick="M1()"></th>
         <th><input type="button" value="M2" onclick="M2()"></th>
@@ -119,7 +114,8 @@
 	    <th><input type="button" value="F3" onclick="F3()"></th>
         <th><input type="button" value="F4" onclick="F4()"></th>
 	    <!-- <th><input type="button" value="F5" onclick="F5()"></th> -->
-	</tr>	
+	</tr>
+   </table>	
     <table>
       	<tr>
            <th><input type="submit" value="男性发音" onclick="clears1()"  ></th>
