--- a/index.html
+++ b/index.html
@@ -100,22 +100,22 @@
 </head>
 <body onkeydown='onEnterDown();'>
 (M=Male, F=Female)<br/>
-   <table>
+   <table1>
      <tr>
-        <th><input type="button" value="M1" onclick="M1()"></th>
-        <th><input type="button" value="M2" onclick="M2()"></th>
-	    <th><input type="button" value="M3" onclick="M3()"></th>
-        <th><input type="button" value="M4" onclick="M4()"></th>
+        <th><input type="button" value="M1" onclick="M1()" class="buttonM"></th>
+        <th><input type="button" value="M2" onclick="M2()" class="buttonM"></th>
+	    <th><input type="button" value="M3" onclick="M3()" class="buttonM"></th>
+        <th><input type="button" value="M4" onclick="M4()" class="buttonM"></th>
 	    <!-- <th><input type="button" value="M5" onclick="M5()"></th> -->
 	</tr>
     <tr>
-        <th><input type="button" value="F1" onclick="F1()"></th>
-        <th><input type="button" value="F2" onclick="F2()"></th>
-	    <th><input type="button" value="F3" onclick="F3()"></th>
-        <th><input type="button" value="F4" onclick="F4()"></th>
+        <th><input type="button" value="F1" onclick="F1()" class="buttonF"></th>
+        <th><input type="button" value="F2" onclick="F2()" class="buttonF"></th>
+	    <th><input type="button" value="F3" onclick="F3()" class="buttonF"></th>
+        <th><input type="button" value="F4" onclick="F4()" class="buttonF"></th>
 	    <!-- <th><input type="button" value="F5" onclick="F5()"></th> -->
 	</tr>
-   </table>	
+   </table1>	
     <table>
       	<tr>
            <th><input type="submit" value="男性发音" onclick="clears1()"  ></th>
