--- a/index.html
+++ b/index.html
@@ -102,17 +102,17 @@
 (M=Male, F=Female)<br/>
    <table1>
      <tr>
-        <th><input type="button" value="M1" onclick="M1()" class="buttonM"></th>
-        <th><input type="button" value="M2" onclick="M2()" class="buttonM"></th>
-	    <th><input type="button" value="M3" onclick="M3()" class="buttonM"></th>
-        <th><input type="button" value="M4" onclick="M4()" class="buttonM"></th>
+        <th><input type="button" value="M1" onclick="M1()" class="buttonM button"></th>
+        <th><input type="button" value="M2" onclick="M2()" class="buttonM button"></th>
+	    <th><input type="button" value="M3" onclick="M3()" class="buttonM button"></th>
+        <th><input type="button" value="M4" onclick="M4()" class="buttonM button"></th>
 	    <!-- <th><input type="button" value="M5" onclick="M5()"></th> -->
 	</tr>
     <tr>
-        <th><input type="button" value="F1" onclick="F1()" class="buttonF"></th>
-        <th><input type="button" value="F2" onclick="F2()" class="buttonF"></th>
-	    <th><input type="button" value="F3" onclick="F3()" class="buttonF"></th>
-        <th><input type="button" value="F4" onclick="F4()" class="buttonF"></th>
+        <th><input type="button" value="F1" onclick="F1()" class="buttonF button"></th>
+        <th><input type="button" value="F2" onclick="F2()" class="buttonF button"></th>
+	    <th><input type="button" value="F3" onclick="F3()" class="buttonF button"></th>
+        <th><input type="button" value="F4" onclick="F4()" class="buttonF button"></th>
 	    <!-- <th><input type="button" value="F5" onclick="F5()"></th> -->
 	</tr>
    </table1>	
@@ -126,7 +126,11 @@
 	       <th><input id="screen2" pattern="^[1-4]{4}$"></th>
         </tr>  
     </table> 
-(The tool is still in beta)
+
+  <p>(The tool is still in beta)</p>
+  	<audio controls>
+	      <source src="family.mp3" type="audio/mpeg">
+    </audio>
 <audio id=a src="M1.mp3" autostart="false">
 	</audio>
 <audio id=b src="M2.mp3" autostart="false">
