--- a/index.html
+++ b/index.html
@@ -119,11 +119,11 @@
     <table>
       	<tr>
            <th><input type="submit" value="男性发音" onclick="clears1()"  ></th>
-	       <th><input id="screen1"></th>
+	       <th><input id="screen1" pattern="^[1-4]{4}$"></th>
         </tr>  
 	    <tr>
            <th><input type="submit" value="女性发音" onclick="clears2()"></th>
-	       <th><input id="screen2"></th>
+	       <th><input id="screen2" pattern="^[1-4]{4}$"></th>
         </tr>  
     </table> 
 
