--- a/index.html
+++ b/index.html
@@ -119,17 +119,17 @@
     <table>
       	<tr>
            <th><input type="submit" value="男性发音" onclick="clears1()"  ></th>
-	       <th><input id="screen1" pattern="^[1-4]{4}$"></th>
+	       <th><input id="screen1"></th>
         </tr>  
 	    <tr>
            <th><input type="submit" value="女性发音" onclick="clears2()"></th>
-	       <th><input id="screen2" pattern="^[1-4]{4}$"></th>
+	       <th><input id="screen2"></th>
         </tr>  
     </table> 
 
   <p>(The tool is still in beta)</p>
   	<audio controls>
-	      <source src="family.mp3" type="audio/mpeg">
+	      <source src="Family.mp3" type="audio/mpeg">
     </audio>
 <audio id=a src="M1.mp3" autostart="false">
 	</audio>
