--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
     </table> 
 
   <p>(The tool is still in beta)</p>
-  	<audio controls>
-	      <source src="Family.mp3" type="audio/mpeg">
+  	<audio controls="controls">
+	      <source src="Family.mp3" type="audio/mp3">
     </audio>
 <audio id=a src="M1.mp3" autostart="false">
 	</audio>
