--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
   <p>(The tool is still in beta)</p>
   	<audio controls="controls">
-	      <source src="Family.mp3">
+	      <source src="Family.mp3" type="audio/mp3">
     </audio>
 <audio id=a src="M1.mp3" autostart="false">
 	</audio>
