--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     </table> 
 
   <p>(The tool is still in beta)</p>
-  	<audio controls="controls">
+  	<audio controls="controls" controlsList="nodownload">
 	      <source src="Family.mp3" type="audio/mp3">
     </audio>
 <audio id=a src="M1.mp3" autostart="false">
