--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 	</div>
 	
     <div>
-      <p id="display"></p>
+      <p id="display" class="display"></p>
     </div>
 	
 <audio id=a src="M1.mp3" autostart="false">
