--- a/index.html
+++ b/index.html
@@ -51,12 +51,11 @@
 	   var i;
 	   var v =document.getElementById("screen2").value;
 	   document.getElementById("display").innerHTML = v;
-	   var colorChange=document.getElementById("display").innerHTML;
 	   var counter2 = 0;
 	   var temp2 = 0;
 	   for(i=0;i<v.length;i++){
 	      if(i==3){
-		  colorChange.style.color='red';
+		  document.getElementById("display").style.color='red';
 		  }
 	   
 	      if(v[i]==1){
