--- a/index.html
+++ b/index.html
@@ -50,14 +50,13 @@
    function clears2(){
 	   var i;
 	   var v =document.getElementById("screen2").value;
-	   document.getElementById("display").innerHTML = v;
+	   <!-- document.getElementById("display").innerHTML = v; -->
+	   var w="";
 	   var counter2 = 0;
 	   var temp2 = 0;
-	   for(i=0;i<v.length;i++){
-	      if(i==3){
-		  document.getElementById("display").style.color='red';
-		  }
 	   
+	   for(i=0;i<v.length;i++){
+
 	      if(v[i]==1){
 		     setTimeout(function(){document.getElementById("e").play()}, i*1000); 
 	        } 
@@ -84,7 +83,10 @@
 
 	      if(v[i]==4){
 		      setTimeout(function(){document.getElementById("h").play()}, i*1000);
-	        }   
+	        }  
+
+			setTimeout(function(){document.getElementById("display").innerHTML=v[i]}, i*1000);
+
 	    }
 	   document.getElementById("screen2").value="";
     }
@@ -130,11 +132,11 @@
    <div>   
       <table>
       	<tr>
-           <th><input type="submit" value="男性发音" onclick="clears1()"  ></th>
+           <th><input type="submit" value="Male" onclick="clears1()"  ></th>
 	       <th><input id="screen1"></th>
         </tr>  
 	    <tr>
-           <th><input type="submit" value="女性发音" onclick="clears2()"></th>
+           <th><input type="submit" value="Female" onclick="clears2()"></th>
 	       <th><input id="screen2"></th>
         </tr>  
       </table> 
@@ -144,11 +146,11 @@
       <p>(The tool is still in beta)</p>
 	</div> 
 	
-	<div>
+	<!-- <div>
   	   <audio controls controlsList="nodownload">
 	      <source src="Family.mp3" type="audio/mp3">
        </audio>
-	</div>
+	</div> -->
 	
     <div>
       <p id="display" class="display center"></p>
